--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="chatbot-messages" id="message-container">
-            <!-- Messages will be added here dynamically -->
+            <!-- Messages will be added here -->
         </div>
         <div class="chatbot-input">
             <input type="text" id="user-input" placeholder="Type a message...">
